src/test/error/Alge.lns
import test.error.Sub6;
{
   alge Value {
      Val1( List<int> ),
   }
   {
      fn func() : Value {
         return .Val1( [1] );
      }
      match func() {
         case .Val1( val ) {
            val.insert( 1 );
         }
      }
   }
   {
      fn func() : &Value {
         return .Val1( [1] );
      }
      match func() {
         case .Val1( val ) {
            val.insert( 1 ); // error
         }
      }
   }
}
{
   proto class Hoge;
   alge Test {
      Val( Hoge ), // error
   }
   class Hoge {
   }
}
{
   match Sub6.func4() {
      case .val1 {
      }
   }
}

pub alge AlgeTest {
   Val1,
   Val2,
}  

{
   let test1 = AlgeTest.Val1( 1 ); // error
}
